<resources>
    <string name="app_name">GAMSYS</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="summary">Logs</string>

    <string name="settings">Settings</string>
    <string name="training_str">Exercises</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>

    <string name="sys">SYS (mmhg):</string>
    <string name="dia">DIA (mmhg):</string>
    <string name="pulse">PULSE:</string>

    <string name="Treatment_cycle">Treatment Cycle (20 Minutes)</string>

    <string name="cycle1_left">Cycle 1 (5m): Pending</string>
    <string name="cycle2_left">Cycle 2 (5m): Pending</string>
    <string name="cycle1_right">Cycle 1 (5m): Pending</string>
    <string name="cycle2_right">Cycle 2 (5m): Pending</string>
    <string name="lhs">Left Hand Device</string>
    <string name="rhs">Right Hand Device</string>
    <string name="treatment_readings_text">Treatment Readings</string>

    <string name="history">History</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

</resources>
